Fix wrap bug

--- a/src/assets/styles/flair.css
+++ b/src/assets/styles/flair.css
@@ -9,12 +9,7 @@
 
 mark[rainbow-silly] {
     position: relative;
-    /*color: darkred;*/
-    /*background-color: lemonchiffon;*/
-    /*padding: 0.1ch 0.5ch;*/
-    /*box-shadow: maroon -4px 4px;*/
-    /*border: 1px solid tan;*/
-    /*border-radius: 10% 10% / 10% 10%;*/
+    white-space: preserve nowrap;
 
     background: linear-gradient(
         90deg,
